Bug 339967 - Plasma 5 default component settings don't affect KDE4 apps
Summary: Plasma 5 default component settings don't affect KDE4 apps
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_componentchooser (other bugs)
Version First Reported In: 5.0.1
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
: 340579 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-10-15 06:41 UTC by Sudhir Khanger
Modified: 2015-12-08 11:49 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sudhir Khanger 2014-10-15 06:41:39 UTC
I have set firefox as my default browser but applications keep opening Chrome. In fact even Chrome acknowledges that its not the default browser and asks to be set as default.

Also all applications open Dolphin yet Konqueror is set as default file manager. If you switch to dolphin it will switch back to Konqueror.

Reproducible: Always

Steps to Reproduce:
1. Systemsettings > default applications > web brower > firefox
2. open a link
3.

Actual Results:  
Opens Chrome

Expected Results:  
Open link in Firefox
Comment 1 David Edmundson 2014-11-03 10:49:36 UTC
where/how are you opening the link?
Comment 2 Sudhir Khanger 2014-11-03 12:30:21 UTC
*** Bug 340579 has been marked as a duplicate of this bug. ***
Comment 3 Sudhir Khanger 2014-11-03 12:32:02 UTC
Like I recieved this through an email from bugzilla in KMail. If I click that email, it will be opened in Konqueror and not Firefox which is set as the default browser.
Comment 4 Sudhir Khanger 2014-11-05 07:39:00 UTC
Links are being opened in any browser but what is set in the system settings. I set Chrome as my default browser in system settings and I had to uninstall both konqueror and firefox to be able to use Chrome.

Chrome settings has set as default browser which shows Chrome is not the default browser. I can't set it to be default browser by clicking on it. Clicking on the tab makes no difference.
Comment 5 David Edmundson 2014-11-05 12:36:06 UTC
Plasma 5 writes to /home/david/.config/kdeglobals. KDE4 apps naturally read from  ~/.kde4/whatever

I'll try and make them sync.

as a workaround run kcmshell4 componentchooser.
Comment 6 David Edmundson 2014-11-05 18:51:19 UTC
Git commit fa9cd276e3f4bf8948870715df79039991ac3c3d by David Edmundson.
Committed on 05/11/2014 at 15:01.
Pushed by davidedmundson into branch 'Plasma/5.1'.

Backport settings made in the component chooser to KDE 4 applications

M  +4    -0    kcms/componentchooser/componentchooserbrowser.cpp
M  +5    -0    kcms/componentchooser/componentchooserfilemanager.cpp
M  +4    -0    kcms/componentchooser/componentchooserterminal.cpp

http://commits.kde.org/plasma-desktop/fa9cd276e3f4bf8948870715df79039991ac3c3d
Comment 7 Hrvoje Senjan 2014-11-05 18:57:09 UTC
(In reply to David Edmundson from comment #6)
> Git commit fa9cd276e3f4bf8948870715df79039991ac3c3d by David Edmundson.
> Backport settings made in the component chooser to KDE 4 applications
> M  +5    -0    kcms/componentchooser/componentchooserfilemanager.cpp

i am not sure filemanager sync will "work".
kde4 uses deprecated $XDG_DATA_HOME/applications/mimeapps.list for both r/w operations, while KF5 already (afaik!) switched to $XDG_CONFIG_DIRS/mimeapps.list
Comment 8 David Edmundson 2014-11-05 19:02:09 UTC
In which case our KF5 settings are wrong too. We're writing to somewhere in .local
Comment 9 Hrvoje Senjan 2014-11-05 19:08:26 UTC
err, KF5 supports both actually (for now at least), but kdelibs4 uses only deprecated location.
Comment 10 Bernd Putsche 2015-04-22 19:51:12 UTC
Bug should be reopened because it seems to be still valid!
Problem currently exists in Fedora 22 Beta using plasma-shell 5.2.2 and framework version 5.8.0.
Google chrome seems to be used to open links when set as the default browser via kde settings but still complains about not being default on every start. Setting as default browser via chrome's settings has no effect at all!
Comment 11 David Edmundson 2015-04-22 19:59:12 UTC
I pushed a fix for 5.3 that should fix this.
Comment 12 Aranjedeath 2015-12-05 23:00:05 UTC
(In reply to David Edmundson from comment #11)
> I pushed a fix for 5.3 that should fix this.

It didn't. I'm on Kubuntu (latest updates installed), which should put me on 5.4.2 or 5.4.3, and I have set chrome as default in both kde 4 and kde 5 (using command in comment 5). the make-default-browser button does nothing in chrome. Links (for example opened in Contacts (or whatever the chat app is called -- not konversation)) open in firefox, even though both kde4 and kde5 default browser menus say to open in chrome.
Comment 13 Sudhir Khanger 2015-12-08 11:49:34 UTC
I had this problem again in Plasma 5.4. More details can be seen here [1]. I had to manually add BrowserApplication[$e]=!google-chrome whatever you want your default browser be to ~/.kde/share/config/kdeglobals.

[1] https://lists.fedoraproject.org/archives/list/kde%40lists.fedoraproject.org/message/2IL6PGQW2TUPM47U3HWFLTWSTICIPCOU/