Backport settings made in the component chooser to KDE 4 applications

BUG: 339967